--- a/public/general.css
+++ b/public/general.css
@@ -169,6 +169,26 @@ h1, h2 {
     max-height: none;
 }
 
+#logout {
+/* remove default behavior */
+    appearance: none;
+    -webkit-appearance: none;
+/* usual styles */
+    padding: 10px;
+    border: none;
+    background-color: #7342A3;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 5px;
+}
+
+#logout:hover {
+    background-color: #aaa;
+}
+
+.nonNavLink {
+    color: #ffa42c;
+}
 @media screen and (min-width: 1000px) {
     .nav-toggle {
         display: none;
