--- a/public/general.css
+++ b/public/general.css
@@ -189,6 +189,11 @@ h1, h2 {
 .nonNavLink {
     color: #ffa42c;
 }
+
+input:focus, select:focus {
+  outline: none;
+}
+
 @media screen and (min-width: 1000px) {
     .nav-toggle {
         display: none;
