--- a/public/box.css
+++ b/public/box.css
@@ -25,6 +25,7 @@
 
 .rounded-input {
     padding: 5px;
+    padding-left: 10px;
     border-radius: 15px;
     border: 1px solid rgb(19, 18, 18);
     transition: .3s border-color;
