--- a/public/movie.css
+++ b/public/movie.css
@@ -1,106 +1,125 @@
+.movieDisplay {
+  width: 80%;
+  background-color: #000000;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.search-container {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 30px 10px 30px 10px;
+}
 
-      .movieDisplay {
-        width: 80%;
-        background-color: #000000;
-        margin-left: auto;
-        margin-right: auto;
-        padding-top: 20px;
-        padding-bottom: 10px;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-      }
+.search-form {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
 
-      .search-container {
-        width: 80%;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 30px 10px 30px 10px;
-      }
+.search-container input,
+select {
+  border-radius: 15px;
+  background-color: #fff;
+  height: 50px;
+  font-size: 24px;
+  padding: 10px;
+  border: none;
+  margin-bottom: 10px;
+}
+select:hover {
+  cursor: pointer;
+}
+#personSearch,
+#moodDrop {
+  width: 500px;
+}
+#moodDrop:hover {
+  cursor: pointer;
+}
+#search {
+  width: 150px;
+  color: #000;
+  background-color: #ec911b;
+}
+#search:hover {
+  background-color: #f1d8b6;
+  cursor: pointer;
+}
 
-      .search-form {
-        width: 100%;
-        display: flex;
-        justify-content: space-around;
-        flex-wrap: wrap;
-      }
+.movieBlock {
+  padding: 10px;
+  perspective: 1000px;
+}
+.movieBlock:hover {
+  transform: rotateY(180deg);
+}
+.moviePoster {
+  position: relative;
+}
 
-      .search-container input,
-      select {
-        border-radius: 15px;
-        background-color: #fff;
-        height: 50px;
-        font-size: 24px;
-        padding: 10px;
-        border: none;
-        margin-bottom: 10px;
-      }
+.moreInfo {
+  position: absolute;
+  width: 200px;
+  margin-left: 0;
+  margin-top: -280px;
+  opacity: 0;
+  color: #fff;
+  padding: 5px;
+  transform: rotateY(180deg);
+}
 
-      #personSearch,
-      #moodDrop {
-        width: 500px;
-      }
+.movieTitle {
+  font-size: 16px;
+  font-weight: bold;
+  padding-bottom: 7px;
+}
 
-      #search {
-        width: 150px;
-        color: #000;
-        background-color: #ec911b;
-      }
+.synopsis {
+  font-size: 15px;
+  padding-bottom: 10px;
+  height: 150px;
+  overflow-y: scroll;
+}
 
-      .movieBlock {
-        padding: 10px;
-      }
+.Button {
+  width: 150px;
+  margin-top: 10px;
+  border: 2px solid #fff;
+  border-radius: 6px;
+  color: #fff;
+  background: transparent;
+  padding: 10px;
+  position: relative;
+}
 
-      .moviePoster {
-        position: relative;
-      }
+input[type="image"] {
+  width: 50px;
+  height: 50px;
+}
 
-      .moreInfo {
-        position: absolute;
-        width: 200px;
-        margin-left: 0;
-        margin-top: -280px;
-        opacity: 0;
-        color: #fff;
-        padding: 5px;
-      }
+.Button:hover {
+  background-color: #7342a3;
+  border: 2px solid #7342a3;
+}
 
-      .movieTitle {
-        font-size: 16px;
-        font-weight: bold;
-        padding-bottom: 7px;
-      }
+.movieBlock.interested .moreInfo {
+  opacity: 1;
+  transition: 0.8s;
+  transform-style: preserve-3d;
+  transform: rotateY(180deg);
+}
 
-      .synopsis {
-        font-size: 15px;
-        padding-bottom: 7px;
-      }
-
-      .Button {
-        width: 150px;
-        margin-top: 5px;
-        border: 2px solid #fff;
-        border-radius: 6px;
-        color: #fff;
-        background: transparent;
-        padding: 7px;
-      }
-
-      input[type="image"] {
-        width: 50px;
-        height: 50px;
-      }
-
-      .Button:hover {
-        background-color: #7342a3;
-        border: 2px solid #7342a3;
-      }
-
-      .movieBlock.interested .moreInfo {
-        opacity: 1;
-      }
-
-      .movieBlock.interested .moviePoster {
-        opacity: 0;
-      }
+.movieBlock.interested .moviePoster {
+  opacity: 0;
+  transition: 0.8s;
+  transform-style: preserve-3d;
+  transform: rotateY(180deg);
+}
