--- a/public/general.css
+++ b/public/general.css
@@ -22,8 +22,6 @@ h1, h2 {
 
 .container {
     max-width: 90%;
-    padding-left: 1.4rem;
-    padding-right: 1.4rem;
     margin-left: auto;
     margin-right: auto;
 }
@@ -39,6 +37,7 @@ h1, h2 {
 .nav-wrapper {
     display: flex;
     justify-content: space-between;
+    width: 80%;
     height: 100%;
     align-items: center;
 }
@@ -209,7 +208,7 @@ input:focus, select:focus {
     }
 
     #navbar .nav-links,
-    #navbar.opened .navbar-links {
+    #navbar.opened .nav-links {
         margin: 0;
         padding: 0;
         box-shadow: none;
@@ -219,6 +218,7 @@ input:focus, select:focus {
         max-height: max-content;
         width: 100%;
         height: 100%;
+        font-size: large;
     }
 }
 
@@ -234,9 +234,9 @@ input:focus, select:focus {
 }
 
 #watchListDiv {
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 #result {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
