fixed login/register for mobile view

--- a/public/box.css
+++ b/public/box.css
@@ -50,3 +50,9 @@
 .submit-button:hover {
     background-color: #ec911b;
 }
+
+@media screen and (max-width: 70px) {
+    .container-form {
+        width: 90%;
+    }
+}
